--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,11 @@ crate-type = ["cdylib"]      # Creates dynamic lib
 
 [package.metadata.winres]
 FileDescription = ""
-FileVersion = "1.0.0.0"
+FileVersion = "1.0.1.0"
 ProductName = "Iced"
-ProductVersion = "1.1.7.0"
+ProductVersion = "1.1.8.0"
 OriginalFilename = "Iced.dll"
-LegalCopyright = "TetzkatLipHoka © 2022"
+LegalCopyright = "TetzkatLipHoka © 2022-2023"
 
 [dependencies]
 libc = "0.2"
@@ -25,7 +25,7 @@ libc = "0.2"
 winres = "0.1.12"
 
 [dependencies.iced-x86]
-version = "1.17.0"
+version = "1.18.0"
 default-features = false
 #features = ["std", "decoder", "encoder", "block_encoder", "op_code_info", "instr_info", "gas", "intel", "masm", "nasm", "fast_fmt", "code_asm", "mvex"]
 features = ["std", "decoder", "encoder", "block_encoder", "op_code_info", "instr_info", "gas", "intel", "masm", "nasm", "fast_fmt", "mvex"]
